--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,25 @@
 .head {
-    position: relative;
+  margin-top: 27px;
     text-align: center;
+    background-image: url(../images/h_img.jpg); height: 700px;
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
     text-align: center;
-    padding-top:17%; 
-    color: wheat;
+    padding-top:20%; 
+    color: whitesmoke;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+  #logo{
+    margin-top: 15px;
+    margin-bottom: 24px;
+    width: 65px;
+    height: 65px;;
   }
   .centered {
     position: absolute;
     text-align: center;
-    color: wheat;
+    color: white;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -26,15 +33,13 @@
   .services {
     position: relative;
     text-align: center;
-    color:wheat;
-  }
-  #tude{
-      opacity: 0.87;
+    color:white;
+    background-image: url(../images/s_image.jpg); width: 100%;; height: 500px; 
   }
   .serve{
     position: absolute;
     text-align: center;
-    color:wheat;
+    color:whitesmoke;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -42,4 +47,11 @@
   }
   #second{
       opacity: 0.98;
+  }
+  .purp{
+    font-family: 'Quattrocento', serif;
+    text-align: center;
+    padding-top: 40px;
+    font-family: 'Gabriela', serif;
+    padding-bottom: 38px;
   }
