--- a/css/styles.css
+++ b/css/styles.css
@@ -55,3 +55,35 @@
     font-family: 'Gabriela', serif;
     padding-bottom: 38px;
   }
+  #portfolio{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    margin-left:18%;
+    margin-right: 16%; 
+  }
+  .mage img{
+    max-width: 100%;
+    max-height: 100%;
+  }
+  .contact{
+  background-image: url('../images/c_image.jpg');
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  color:"black";
+  }
+
+input[type=text] {
+  background:transparent;
+  color: white;
+}
+textarea[type=text] {
+  background:transparent;
+  color: white;
+}
+
+.submit{
+  position:absolute;
+  padding-left: 25%;
+}
